--- a/presentation.css
+++ b/presentation.css
@@ -22,3 +22,42 @@
     width: 90%;
     margin: auto;
 }
+
+pre code span.hljs-type {
+    color: black;
+}
+
+pre code span.hljs-keyword {
+    font-weight: bold;
+}
+
+#accuracies table tr.no-border td {
+    border: none;
+}
+
+#accuracies .table-part-1, #accuracies tr:not(.table-part-2) td:last-child {
+    color: #820b77;
+    border-color: black;
+}
+
+#accuracies tr.table-part-1 td {
+    border-color: black;
+}
+
+#accuracies .table-part-2, #accuracies tr:not(.table-part-1) td:first-child {
+    color: darkblue;
+}
+
+#accuracies table tr td.focus {
+    border-color: black;
+    color: #a20101;
+}
+
+body .reveal pre {
+    box-shadow: none;
+}
+
+.reveal pre code {
+    color: black;
+    max-height: 455px;
+}
